# openmw-vr-quest

./: .gitignore  .gitlab-ci-madsbuvi.yml  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: push.yml  release.yml  windows.yml
CI/: before_script.msvc.sh  deps_versions.msvc.sh  github.env  install_debian_deps.sh  ubuntu_gcc_preprocess.sh
android/: README.md  run-on-device.sh  settings.gradle
android/app/: build.gradle  openmw.base.cfg
android/buildscripts/: CMakeLists.txt  build.sh
android/buildscripts/include/: download-ndk.sh  setup-ndk.sh  version.sh
android/buildscripts/patches/: sdl2-hidapi-null-jvm.patch
apps/launcher/: advancedpage.cpp  maindialog.cpp  settingspage.cpp
apps/launcher/ui/: settingspage.ui
apps/openmw/: CMakeLists.txt  engine.cpp  engine.hpp  main.cpp
apps/openmw/mwbase/: inputmanager.hpp  luamanager.hpp  windowmanager.hpp  world.hpp
apps/openmw/mwclass/: creature.cpp  creature.hpp  npc.cpp  npc.hpp
apps/openmw/mwgui/: alchemywindow.cpp  alchemywindow.hpp  container.cpp  dialogue.cpp  dialogue.hpp  hud.cpp  hud.hpp  inventorywindow.cpp  inventorywindow.hpp  itemview.cpp  itemwidget.cpp  itemwidget.hpp  layout.cpp  layout.hpp  (+23 more)
buildscripts/openmw-vr/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
buildscripts/openmw-vr/apps/openmw/: CMakeLists.txt  engine.cpp  engine.cpp.orig  engine.hpp  vrengine.cpp
buildscripts/openmw-vr/apps/openmw/mwbase/: environment.cpp  environment.hpp  inputmanager.hpp  windowmanager.hpp  world.hpp
buildscripts/openmw-vr/apps/openmw/mwclass/: creature.cpp  creature.hpp  npc.cpp  npc.hpp
buildscripts/openmw-vr/apps/openmw/mwgui/: alchemywindow.cpp  alchemywindow.hpp  container.cpp  dialogue.cpp  hud.cpp  hud.hpp  inventorywindow.cpp  inventorywindow.hpp  keyboardnavigation.cpp  layout.cpp  layout.hpp  loadingscreen.cpp  mapwindow.cpp  messagebox.cpp  messagebox.hpp  mode.hpp  savegamedialog.cpp  savegamedialog.hpp  settingswindow.cpp  settingswindow.hpp  spellicons.cpp  spellwindow.cpp  statswindow.cpp  statswindow.hpp  tooltips.cpp  tradewindow.cpp  windowbase.cpp  windowbase.hpp  windowmanagerimp.cpp  windowmanagerimp.hpp
buildscripts/openmw-vr/apps/openmw/mwinput/: actionmanager.cpp  bindingsmanager.cpp  bindingsmanager.hpp  inputmanagerimp.hpp  mousemanager.cpp  mousemanager.hpp
buildscripts/openmw-vr/apps/openmw/mwmechanics/: aiactivate.cpp  aiactivate.hpp  aiescort.cpp  aitravel.hpp  character.cpp  combat.cpp
buildscripts/openmw-vr/apps/openmw/mwphysics/: movementsolver.cpp
buildscripts/openmw-vr/apps/openmw/mwrender/: animation.cpp  animation.hpp  camera.cpp  camera.hpp  npcanimation.cpp  npcanimation.hpp  renderingmanager.cpp  renderingmanager.hpp  screenshotmanager.cpp  util.cpp  util.hpp  vismask.hpp  water.cpp  weaponanimation.cpp
buildscripts/openmw-vr/apps/openmw/mwvr/: openxraction.cpp  openxraction.hpp  openxractionset.cpp  openxractionset.hpp  openxrdebug.cpp  openxrdebug.hpp  openxrinput.cpp  openxrinput.hpp  openxrmanager.cpp  openxrmanager.hpp  openxrmanagerimpl.cpp  openxrmanagerimpl.hpp  openxrplatform.cpp  openxrplatform.hpp  openxrswapchain.cpp  openxrswapchain.hpp  openxrswapchainimage.cpp  openxrswapchainimage.hpp  openxrswapchainimpl.cpp  openxrswapchainimpl.hpp  openxrtracker.cpp  openxrtracker.hpp  openxrtypeconversions.cpp  openxrtypeconversions.hpp  realisticcombat.cpp  realisticcombat.hpp  vranimation.cpp  vranimation.hpp  vrcamera.cpp  vrcamera.hpp  vrenvironment.cpp  vrenvironment.hpp  vrframebuffer.cpp  vrframebuffer.hpp  vrgui.cpp  vrgui.hpp  vrinput.cpp  vrinput.hpp  vrinputmanager.cpp  vrinputmanager.hpp  (+18 more)
buildscripts/openmw-vr/apps/openmw/mwworld/: class.cpp  class.hpp  player.cpp  player.hpp  projectilemanager.cpp  worldimp.cpp  worldimp.hpp
cmake/: FindOpenXR.cmake  OpenMWMacros.cmake
components/: CMakeLists.txt
components/debug/: debugging.cpp
components/files/: androidpath.cpp
components/lua/: luastate.hpp
components/lua_ui/: widget.cpp  widget.hpp
components/misc/: callbackmanager.cpp  callbackmanager.hpp  mathutil.hpp  notnullptr.hpp
components/myguiplatform/: additivelayer.cpp  additivelayer.hpp  myguirendermanager.cpp  myguirendermanager.hpp  myguitexture.cpp  myguitexture.hpp  scalinglayer.hpp
components/resource/: imagemanager.cpp
components/sceneutil/: color.cpp  color.hpp  depth.cpp  depth.hpp  glextensions.cpp  lightmanager.cpp  lightmanager.hpp  riggeometry.cpp  rtt.cpp  shadow.cpp  skeleton.cpp  skeleton.hpp  util.cpp  util.hpp
components/sdlutil/: sdlgraphicswindow.cpp  sdlgraphicswindow.hpp  sdlinputwrapper.cpp  sdlvideowrapper.cpp
components/settings/: settings.cpp  settings.hpp  values.hpp
components/shader/: shadermanager.cpp
components/stereo/: multiview.cpp  multiview.hpp  stereomanager.cpp  stereomanager.hpp  types.cpp  types.hpp
components/vfs/: qtconversion.cpp
components/vr/: constants.hpp  directx.cpp  directx.hpp  frame.cpp  frame.hpp  layer.cpp  layer.hpp  rendertoswapchain.cpp  rendertoswapchain.hpp  session.cpp  session.hpp  space.cpp  space.hpp  swapchain.cpp  swapchain.hpp  trackinglistener.cpp  trackinglistener.hpp  trackingmanager.cpp  trackingmanager.hpp  trackingsource.cpp  trackingsource.hpp  trackingtransform.cpp  trackingtransform.hpp  viewer.cpp  viewer.hpp  vr.cpp  vr.hpp
components/widgets/: box.cpp  box.hpp  numericeditbox.hpp  virtualkeyboardmanager.cpp  virtualkeyboardmanager.hpp
components/xr/: action.cpp  action.hpp  actionset.cpp  actionset.hpp  debug.cpp  debug.hpp  extensions.cpp  extensions.hpp  instance.cpp  instance.hpp  interactionprofiles.cpp  interactionprofiles.hpp  platform.cpp  platform.hpp  session.cpp  session.hpp  space.cpp  space.hpp  swapchain.cpp  swapchain.hpp  tracking.cpp  tracking.hpp  typeconversion.cpp  typeconversion.hpp
docs/source/: luadoc_data_paths.sh
files/: openxrinteractionprofiles.xml  settings-default.cfg  settings-overrides-vr.cfg  xrcontrollersuggestions.xml
files/data/: CMakeLists.txt  builtin.omwscripts
files/lua_api/: CMakeLists.txt
files/mygui/: CMakeLists.txt
files/shaders/: CMakeLists.txt
(+246 files in other folders)
